--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.11",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
+    "expo-sqlite": "~15.2.12",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
@@ -29,7 +33,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0"
+    "react-native-web": "~0.20.0",
+    "wa-sqlite": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
