--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.6",
+    "@types/lodash": "^4.17.17",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "expo": "~53.0.11",
@@ -27,9 +28,11 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
